# barotrauma-compress-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  ci.yml  publish.yml
src/: cli_args.rs  lib.rs  main.rs
test-resources/: barotrauma_nerds_000.save
test-resources/test/: Narwhal.sub  gamesession.xml
tests/: test_compression.rs
