[package]
name = "barotrauma-compress"
version = "1.0.0"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2021"
description = "Compress and decompress Barotrauma save files"
readme = "README.md"
repository = "https://github.com/zkxs/barotrauma-compress-rs"
license = "AGPL-3.0-only"
keywords = ["barotrauma", "save"]
categories = ["command-line-utilities"]

[profile.release]
lto = "fat"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
