[package]
name = "barotrauma-compress"
version = "1.1.0"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2021"
description = "Compress and decompress Barotrauma save files"
readme = "README.md"
repository = "https://github.com/zkxs/barotrauma-compress-rs"
license = "AGPL-3.0-only"
keywords = ["barotrauma", "save"]
categories = ["command-line-utilities"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.release-optimized-debug]
inherits = "release"
strip = false # required for `cargo-bloat`
debug = true # required for `cargo flamegraph`, and makes `cargo-bloat` output significantly better

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
